--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Merge
+name: Main
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: app
-          path: app/build/outputs/apk/
+          path: app/build/outputs/apk/release/app-release-unsigned.apk
 
   dokka:
     runs-on: ubuntu-latest
