update codeStyleConfig of the project
Signed-off-by: Basler182 <showdialog@web.de>

--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,9 @@ replay_pid*
 !.idea/copyright
 # Keep the code styles.
 !/.idea/codeStyles
-/.idea/codeStyles/*
 !/.idea/codeStyles/Project.xml
 !/.idea/codeStyles/codeStyleConfig.xml
+!/.idea/detekt.xml
 
 # Gradle cache
 .gradle
