--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,11 @@
+#
+# This source file is part of the Stanford Spezi open-source project
+#
+# SPDX-FileCopyrightText: 2024 Stanford University
+#
+# SPDX-License-Identifier: MIT
+#
+
 name: Main
 
 on:
@@ -12,28 +20,38 @@ jobs:
   buildtestandanalyze:
     uses: ./.github/workflows/build-test-analyze.yml
     secrets: inherit
-
-  uploadartifacts:
-    name: Archive production artifacts
+  googleplayalpha:
+    name: Upload App to Google Play - Alpha
     runs-on: ubuntu-latest
     needs: buildtestandanalyze
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.1.0
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: app
-          path: app/build/outputs/apk/release/app-release-unsigned.apk
-
+        uses: actions/checkout@v4
+      - name: Bundle Install
+        run: |
+          gem install bundler
+          bundle install
+      - name: Setup keystore file
+        env:
+          KEY_STORE: ${{ secrets.KEY_STORE }}
+        run: |
+          echo $KEY_STORE | base64 -d > keystore.jks
+          echo $KEY_STORE | base64 -d > app/keystore.jks
+      - name: Build and Deploy
+        env:
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          FASTLANE_SERVICE_ACCOUNT: ${{ secrets.FASTLANE_SERVICE_ACCOUNT }}
+        run: bundle exec fastlane beta
   dokka:
+    name: Dokka Documentation Deployment
     runs-on: ubuntu-latest
     needs: buildtestandanalyze
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.1.0
+        uses: actions/checkout@v4
       - name: Set up JDK 17
-        uses: actions/setup-java@v3.13.0
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
