--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
     name: Upload App to Google Play - Alpha
     runs-on: ubuntu-latest
     needs: buildtestandanalyze
+    environment: alpha
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -41,7 +42,7 @@ jobs:
         env:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          FASTLANE_SERVICE_ACCOUNT: ${{ secrets.FASTLANE_SERVICE_ACCOUNT }}
+          SERVICE_ACCOUNT_JSON_KEY: ${{ secrets.SERVICE_ACCOUNT_JSON_KEY }}
         run: bundle exec fastlane beta
   dokka:
     name: Dokka Documentation Deployment
