--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 *.class
 *.dex
 
+# Kotlin compiler
+.kotlin
+
 # Log file
 *.log
 
@@ -56,5 +59,4 @@ build/
 
 # services and secrets
 app/google-services.json
-app/src/main/res/values/secrets.xml
 modules/account/src/main/res/values/secrets.xml
