--- a/internal/detekt-config.yml
+++ b/internal/detekt-config.yml
@@ -116,7 +116,8 @@ complexity:
     constructorThreshold: 7
     ignoreDefaultParameters: false
     ignoreDataClasses: true
-    ignoreAnnotated: []
+    ignoreAnnotated:
+      - 'Composable'
     excludes: ['**/test/**', '**/androidTest/**']
   MethodOverloading:
     active: false
