--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,12 @@ name: Main
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 concurrency:
   group: build-${{ github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   buildtestandanalyze:
@@ -32,6 +33,10 @@ jobs:
         run: |
           gem install bundler
           bundle install
+      - name: Decode and Write Google Service JSON
+        env:
+            GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $GOOGLE_SERVICES_JSON | base64 --decode >./app/google-services.json
       - name: Setup keystore file
         env:
           KEY_STORE: ${{ secrets.KEY_STORE }}
