--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,7 +10,8 @@ name: Pull Request
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 concurrency:
   group: build-${{ github.ref }}
