--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,8 +10,7 @@ name: Pull Request
 
 on:
   pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: build-${{ github.ref }}
