--- a/.github/workflows/build-test-analyze.yml
+++ b/.github/workflows/build-test-analyze.yml
@@ -13,6 +13,22 @@ on:
   workflow_call:
 
 jobs:
+  detekt:
+    name: Detekt review
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.0
+        with:
+          fetch-depth: 1
+          ref: ${{ github.head_ref }}
+      - name: Detekt PR Check
+        uses: alaegin/Detekt-Action@v1.23.6
+        with:
+          reviewdog_reporter: github-pr-check
+          github_token: ${{ secrets.github_token }}
+          fail_on_error: true
+          detekt_config: internal/detekt-config.yml
   buildtestandanalyze:
     name: Build, Test and Analyze
     runs-on: ubuntu-latest
@@ -53,3 +69,26 @@ jobs:
           flags: unittests
           name: codecov-coverage
           token: ${{ secrets.CODECOV_TOKEN }}
+  dokka:
+    name: Dokka Documentation Deployment
+    runs-on: ubuntu-latest
+    needs: buildtestandanalyze
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Run Dokka with Gradle
+        run: ./gradlew dokkaHtmlMultiModule
+      - name: Deploy to GitHub Pages
+        if: github.ref == 'refs/heads/main'
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: build/dokka/htmlMultiModule
