--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,14 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  buildtestandanalyze:
-    uses: ./.github/workflows/build-test-analyze.yml
-    secrets: inherit
-  googleplayalpha:
-    name: Upload App to Google Play - Alpha
+  # buildtestandanalyze:
+  #   uses: ./.github/workflows/build-test-analyze.yml
+  #   secrets: inherit
+  googleplayinternal:
+    name: Upload App to Google Play - Internal
     runs-on: ubuntu-latest
-    needs: buildtestandanalyze
-    environment: alpha
+    # needs: buildtestandanalyze
+    environment: internal
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -57,25 +57,3 @@ jobs:
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           SERVICE_ACCOUNT_JSON_KEY: ${{ secrets.SERVICE_ACCOUNT_JSON_KEY }}
         run: bundle exec fastlane beta
-  dokka:
-    name: Dokka Documentation Deployment
-    runs-on: ubuntu-latest
-    needs: buildtestandanalyze
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: gradle
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-      - name: Run Dokka with Gradle
-        run: ./gradlew dokkaHtmlMultiModule
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: build/dokka/htmlMultiModule
