--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,4 @@ jobs:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           SERVICE_ACCOUNT_JSON_KEY: ${{ secrets.SERVICE_ACCOUNT_JSON_KEY }}
-        run: bundle exec fastlane beta
+        run: bundle exec fastlane internal
