--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,13 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # buildtestandanalyze:
-  #   uses: ./.github/workflows/build-test-analyze.yml
-  #   secrets: inherit
+  buildtestandanalyze:
+    uses: ./.github/workflows/build-test-analyze.yml
+    secrets: inherit
   googleplayinternal:
     name: Upload App to Google Play - Internal
     runs-on: ubuntu-latest
-    # needs: buildtestandanalyze
+    needs: buildtestandanalyze
     environment: internal
     steps:
       - name: Checkout code
