Fastlane Setup & Google Play Alpha Deployment (#30)

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,14 @@ build/
 *.apk
 *.ap_
 
+# Other files
+.DS_Store
+
+# fastlane
+play-store-credentials.json
+keystore.jks
+app/release/*
+app/debug/*
+
 # services and secrets
-app/google-services.json
 modules/account/src/main/res/values/secrets.xml
