--- a/.github/workflows/build-test-analyze.yml
+++ b/.github/workflows/build-test-analyze.yml
@@ -1,3 +1,11 @@
+#
+# This source file is part of the Stanford Spezi open-source project
+#
+# SPDX-FileCopyrightText: 2024 Stanford University
+#
+# SPDX-License-Identifier: MIT
+#
+
 name: Build, Test and Analyze
 
 on:
@@ -5,44 +13,55 @@ on:
   workflow_call:
 
 jobs:
+  detekt:
+    name: Detekt review
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.0
+        with:
+          fetch-depth: 1
+          ref: ${{ github.head_ref }}
+      - name: Detekt PR Check
+        uses: alaegin/Detekt-Action@v1.23.6
+        with:
+          reviewdog_reporter: github-pr-check
+          github_token: ${{ secrets.github_token }}
+          fail_on_error: true
+          detekt_config: internal/detekt-config.yml
   buildtestandanalyze:
     name: Build, Test and Analyze
     runs-on: ubuntu-latest
     timeout-minutes: 120
-    permissions: # needed for CodeQL steps
+    permissions:
       security-events: write
       packages: read
       actions: read
       contents: read
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.1.0
-      - name: Initialize CodeQL # CodeQL init should happen before project build!
-        uses: github/codeql-action/init@v3
-        with:
-          languages: java-kotlin
-          build-mode: manual
+        uses: actions/checkout@v4
       - name: Set up JDK 17
         uses: actions/setup-java@v3.13.0
         with:
           distribution: 'temurin'
           java-version: '17'
           cache: gradle
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-      - name: decode and write google service json
-        env: 
-            GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-        run: echo $GOOGLE_SERVICES_JSON | base64 --decode >./app/google-services.json
-      # TODO: Add step to inject secrets.xml at ./modules/account/src/main/res/values/secrets.xml
-      - name: Build and test
-        run: ./gradlew build
-      - name: Perform CodeQL Analysis # CodeQL analysis needs project build!
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3'
+          bundler-cache: true
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: java-kotlin
+          build-mode: manual
+      - name: Build and Test
+        run: bundle exec fastlane test
+      - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:java-kotlin"
-      # TODO: remove threshold once changes have been unit tested
       - name: Upload JaCoCo report to Codecov
         uses: codecov/codecov-action@v4
         with:
@@ -50,4 +69,25 @@ jobs:
           flags: unittests
           name: codecov-coverage
           token: ${{ secrets.CODECOV_TOKEN }}
-          threshold: 20
+  dokka:
+    name: Dokka Documentation Deployment
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Run Dokka with Gradle
+        run: ./gradlew dokkaHtmlMultiModule
+      - name: Deploy to GitHub Pages
+        if: github.ref == 'refs/heads/main'
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: build/dokka/htmlMultiModule
