--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,58 @@
+#
+# This source file is part of the Stanford Spezi open-source project
+#
+# SPDX-FileCopyrightText: 2024 Stanford University
+#
+# SPDX-License-Identifier: MIT
+#
+
 name: Main
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+  workflow_dispatch:
 
 concurrency:
-  group: build-${{ github.ref }}
-  cancel-in-progress: true
+  group: main
+  cancel-in-progress: false
 
 jobs:
   buildtestandanalyze:
     uses: ./.github/workflows/build-test-analyze.yml
     secrets: inherit
-
-  uploadartifacts:
-    name: Archive production artifacts
+  googleplayinternal:
+    name: Upload App to Google Play - Internal
     runs-on: ubuntu-latest
     needs: buildtestandanalyze
+    environment: internal
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.1.0
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: app
-          path: app/build/outputs/apk/release/app-release-unsigned.apk
-
-  dokka:
-    runs-on: ubuntu-latest
-    needs: buildtestandanalyze
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.1.0
+        uses: actions/checkout@v4
       - name: Set up JDK 17
         uses: actions/setup-java@v3.13.0
         with:
           distribution: 'temurin'
           java-version: '17'
           cache: gradle
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-      - name: Run Dokka with Gradle
-        run: ./gradlew dokkaHtmlMultiModule
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - uses: ruby/setup-ruby@v1
         with:
-          branch: gh-pages
-          folder: build/dokka/htmlMultiModule
+          ruby-version: '3.3'
+          bundler-cache: true
+      - name: Decode and Write Google Service JSON
+        env:
+            GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $GOOGLE_SERVICES_JSON | base64 --decode >./app/google-services.json
+      - name: Setup keystore file
+        env:
+          KEY_STORE: ${{ secrets.KEY_STORE }}
+        run: |
+          echo $KEY_STORE | base64 -d > keystore.jks
+          echo $KEY_STORE | base64 -d > app/keystore.jks
+      - name: Build and Deploy
+        env:
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          SERVICE_ACCOUNT_JSON_KEY: ${{ secrets.SERVICE_ACCOUNT_JSON_KEY }}
+        run: bundle exec fastlane internal
