--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,32 +1,22 @@
+#
+# This source file is part of the Stanford Spezi open-source project
+#
+# SPDX-FileCopyrightText: 2024 Stanford University
+#
+# SPDX-License-Identifier: MIT
+#
+
 name: Pull Request
 
 on:
   pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 concurrency:
   group: build-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  detekt:
-    name: Detekt review
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.1.0
-        with:
-          fetch-depth: 1
-          ref: ${{ github.head_ref }}
-      - name: Detekt PR Check
-        uses: alaegin/Detekt-Action@v1.23.6
-        with:
-          reviewdog_reporter: github-pr-check
-          github_token: ${{ secrets.github_token }}
-          fail_on_error: true
-          detekt_config: internal/detekt-config.yml
-
   buildtestandanalyze:
     uses: ./.github/workflows/build-test-analyze.yml
     secrets: inherit
-
