--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,12 +2,12 @@
 [versions]
 accompanistPager = "0.35.1-alpha"
 activityCompose = "1.9.0"
-agp = "8.4.1"
-androidTools = "31.4.2"
+agp = "8.5.0"
+androidTools = "31.5.0"
 appcompat = "1.7.0"
 compileSdk = "34"
-composeBom = "2024.05.00"
-composeNavigation = "2.8.0-alpha08"
+composeBom = "2024.06.00"
+composeNavigation = "2.8.0-beta03"
 coreKtx = "1.13.1"
 coreTestingVersion = "2.2.0"
 coroutinesVersion = "1.8.0"
@@ -19,7 +19,7 @@ firebaseAuthKtx = "23.0.0"
 firebaseFirestoreKtx = "25.0.0"
 firebaseFunctionsKtx = "21.0.0"
 firebaseStorageKtx = "21.0.0"
-foundation = "1.6.7"
+foundation = "1.6.8"
 googleGmsGoogleServices = "4.4.2"
 googleid = "1.1.0"
 hapiFhirVersion = "5.7.9"
@@ -31,7 +31,7 @@ junitVersion = "1.1.5"
 kotlin = "2.0.0"
 kotlinxSerializationJson = "1.6.3"
 kspVersion = "2.0.0-1.0.21"
-lifecycleKtx = "2.8.1"
+lifecycleKtx = "2.8.2"
 lifecycleRuntimeKtx = "2.7.0"
 minSdk = "31"
 mockKVersion = "1.13.10"
