--- a/.github/workflows/build-test-analyze.yml
+++ b/.github/workflows/build-test-analyze.yml
@@ -74,7 +74,7 @@ jobs:
     strategy:
       matrix:
         api-level: [34] # api-level: [29, 33, 34, 35]
-        profile: ["pixel_7"] # profile: ["small_phone", "medium_phone", "pixel_7"]
+        # profile: ["medium_phone"] # profile: ["small_phone", "medium_phone", "pixel_7"]
         target: ["google_apis"] # target: ["default", "google_apis"]
     steps:
       - name: checkout
@@ -100,7 +100,7 @@ jobs:
         with:
           api-level: ${{ matrix.api-level }}
           target: ${{ matrix.target }}
-          profile: ${{ matrix.profile }}
+          # profile: ${{ matrix.profile }}
           arch: x86_64
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
@@ -113,7 +113,7 @@ jobs:
         with:
           api-level: ${{ matrix.api-level }}
           target: ${{ matrix.target }}
-          profile: ${{ matrix.profile }}
+          # profile: ${{ matrix.profile }}
           arch: x86_64
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
