--- a/.github/workflows/build-test-analyze.yml
+++ b/.github/workflows/build-test-analyze.yml
@@ -74,11 +74,17 @@ jobs:
     strategy:
       matrix:
         api-level: [34] # api-level: [29, 33, 34, 35]
-        # profile: ["medium_phone"] # profile: ["small_phone", "medium_phone", "pixel_7"]
+        profile: ["pixel_6"]
         target: ["google_apis"] # target: ["default", "google_apis"]
     steps:
       - name: checkout
         uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3.13.0
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: gradle
       - name: Enable KVM
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
@@ -100,7 +106,7 @@ jobs:
         with:
           api-level: ${{ matrix.api-level }}
           target: ${{ matrix.target }}
-          # profile: ${{ matrix.profile }}
+          profile: ${{ matrix.profile }}
           arch: x86_64
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
@@ -113,7 +119,7 @@ jobs:
         with:
           api-level: ${{ matrix.api-level }}
           target: ${{ matrix.target }}
-          # profile: ${{ matrix.profile }}
+          profile: ${{ matrix.profile }}
           arch: x86_64
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
