--- a/.github/workflows/build-test-analyze.yml
+++ b/.github/workflows/build-test-analyze.yml
@@ -72,10 +72,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        api-level: [34] # api-level: [29, 33, 34, 35]
+        api-level: [29, 33, 34, 35]
         profile: ["pixel_6"]
-        target: ["google_apis"] # target: ["default", "google_apis"]
+        target: ["default", "google_apis"]
     steps:
       - name: checkout
         uses: actions/checkout@v4
