--- a/.github/workflows/build-test-analyze.yml
+++ b/.github/workflows/build-test-analyze.yml
@@ -70,6 +70,7 @@ jobs:
           name: codecov-coverage
           token: ${{ secrets.CODECOV_TOKEN }}
   test:
+    name: Instrumented tests
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
