--- a/.github/workflows/build-test-analyze.yml
+++ b/.github/workflows/build-test-analyze.yml
@@ -130,7 +130,7 @@ jobs:
       - name: Upload JaCoCo report to Codecov
         uses: codecov/codecov-action@v4
         with:
-          files: '**/build/reports/jacoco/jacocoCoverageReport/jacocoCoverageReport.xml'
+          files: '**/build/reports/coverage/androidTest/debug/connected/index.html'
           flags: uitests
           name: codecov-coverage
           token: ${{ secrets.CODECOV_TOKEN }}
