Feature: educational videos (#54)
# *Feature: educational videos*

## :gear: Release Notes 
- education screen


![image](https://github.com/StanfordSpezi/SpeziKt/assets/48420258/cc7db061-045e-44bc-b513-b623744b925b)


![image](https://github.com/StanfordSpezi/SpeziKt/assets/48420258/b3f96580-4b32-40f1-a400-9f560a69a48e)



![image](https://github.com/StanfordSpezi/SpeziKt/assets/48420258/33611602-ebce-49ec-9d41-5411ccc55509)

## :white_check_mark: Testing
further tests will be added as soon as the basic architecture has been
confirmed

## :pencil: Code of Conduct & Contributing Guidelines 

By submitting creating this pull request, you agree to follow our [Code
of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/StanfordSpezi/.github/blob/main/CONTRIBUTING.md):
- [x] I agree to follow the [Code of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/StanfordSpezi/.github/blob/main/CONTRIBUTING.md).

---------

Signed-off-by: Basler182 <showdialog@web.de>
Co-authored-by: Eldi Cano <eldi.cano@hotmail.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,9 @@ accompanistPager = "0.35.1-alpha"
 activityCompose = "1.9.0"
 agp = "8.5.0"
 androidTools = "31.5.0"
+androidyoutubeplayer-core = "12.1.0"
 appcompat = "1.7.0"
+coilCompose = "2.6.0"
 compileSdk = "34"
 composeBom = "2024.06.00"
 composeNavigation = "2.8.0-beta03"
@@ -67,6 +69,8 @@ androidx-security-crypto-ktx = { group = "androidx.security", name = "security-c
 androidx-test-core = { group = "androidx.test", name = "core", version.ref = "testCoreVersion" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "rulesVersion" }
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "runnerVersion" }
+androidyoutubeplayer-core = { module = "com.pierfrancescosoffritti.androidyoutubeplayer:core", version.ref = "androidyoutubeplayer-core" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
